[gd_scene load_steps=7 format=3 uid="uid://r5uvh5a0weji"]

[ext_resource type="Texture2D" uid="uid://drftpt421hbft" path="res://assets/characters/tile_0120.png" id="1_w2qml"]
[ext_resource type="Script" path="res://script/bat.gd" id="2_qgwpo"]
[ext_resource type="Texture2D" uid="uid://bxd2dp4a6mhcb" path="res://assets/ui/healthbarUnder.png" id="3_grhr1"]
[ext_resource type="Texture2D" uid="uid://b5ptlyexxxsgu" path="res://assets/ui/healthbarProgress.png" id="4_hfqex"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ld2x6"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_24ct6"]
radius = 13.0384

[node name="bat" type="CharacterBody2D"]
script = ExtResource("2_qgwpo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_w2qml")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ld2x6")

[node name="BatHealthbar" type="TextureProgressBar" parent="."]
offset_left = -14.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = -5.0
scale = Vector2(0.4608, 0.488613)
texture_under = ExtResource("3_grhr1")
texture_progress = ExtResource("4_hfqex")

[node name="enemy_hitbox" type="Area2D" parent="." groups=["enemy_hitbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_24ct6")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1

[connection signal="body_shape_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_shape_entered"]
[connection signal="body_shape_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_shape_exited"]
